HW5/javali_tests/not ours/new/HW3_MarLin/type_error/unary_op/ErrArithmeticUnOp2.javali
class Main {

   void main() {
      boolean b;
      b = -null;
   }
}
